# GenAI_projects_theory

./: .gitignore  readme.md
01_GenAI_with_aws_test/: README.md
01_GenAI_with_aws_test/blog_gen_bedrock/: app.py
03_LLM_engineering/: pyproject.toml  requirements.txt
03_LLM_engineering/week1/: day1.ipynb  day2.ipynb  day4.ipynb  day5.ipynb
03_LLM_engineering/week1/solutions/: day1_with_ollama.ipynb
03_LLM_engineering/week2/: day1.ipynb  day3.ipynb  day4.ipynb  day5.ipynb
03_LLM_engineering/week3/: Week_3_Day_1_Colab.ipynb  Week_3_Day_3_tokenizers.ipynb  Week_3_Day_4_models.ipynb  Week_3_Day_5_Meeting_Minutes_product.ipynb  day5.ipynb  week_3_day_2_pipelines.ipynb
03_LLM_engineering/week4/: day4.ipynb
03_LLM_engineering/week5/: day1.ipynb
