[project]
name = "03-llm-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "ipykernel",
    "ipywidgets",
    "requests",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "torch",
    "transformers==4.56.2",
    "tqdm",
    "openai",
    "gradio",
    "langchain",
    "langchain-core",
    "langchain-text-splitters",
    "langchain-openai",
    "langchain-chroma",
    "langchain-community",
    "datasets==3.6.0",
    "matplotlib",
    "google-generativeai",
    "anthropic",
    "chromadb",
    "plotly",
    "jupyter-dash",
    "beautifulsoup4",
    "pydub",
    "modal",
    "ollama",
    "psutil",
    "setuptools",
    "speedtest-cli",
    "sentence_transformers",
    "feedparser",
    "protobuf==3.20.2",
    "wandb",
    "diffusers",
    "accelerate"
]
